overflow fix

--- a/app/src/cartes/style.css
+++ b/app/src/cartes/style.css
@@ -54,6 +54,7 @@
 .row {
   margin-right: 0px!important;
   margin-left: 0px!important;
+  overflow: hidden;
 }
 
 .card-body{
